--- a/packages.html
+++ b/packages.html
@@ -251,7 +251,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>I’m the author of 3 open-source packages, respectively devoted to experiment creation, EEG and biosignals analysis and statistics.</p>
+<p>I’m the author of 3 open-source packages, respectively devoted to experiment creation, physiological signals analysis and statistics.</p>
 <hr />
 <p><img src="media/neuropsydia.png" width="300" style="display: block; margin: auto;" /></p>
 <div id="neuropsydia" class="section level3">
