major theme change

--- a/about.html
+++ b/about.html
@@ -11,11 +11,11 @@
 
 
 
-<title>About me</title>
+<title>About me.</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -98,34 +98,34 @@ button.code-folding-btn:focus {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 51px;
+  padding-top: 64px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 
 .section h2 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h3 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h4 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h5 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h6 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 </style>
 
@@ -164,7 +164,7 @@ $(document).ready(function () {
 
 
 
-<div class="navbar navbar-inverse  navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
@@ -246,11 +246,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About me</h1>
+<h1 class="title toc-ignore">About me.</h1>
 
 </div>
 
 
+<hr />
 <!-- <style> -->
 <!-- .image{float: left;} -->
 <!-- </style> -->
@@ -270,8 +271,8 @@ $(document).ready(function () {
 <h3><strong>Download</strong></h3>
 <p>You can download my <strong>full CV</strong> with the following links:</p>
 <ul>
-<li><p>💂 <a target="_blank" href="DominiqueMakowski_CV.pdf#" class="download" title="English">English</a></p></li>
-<li><p>🥐 <a target="_blank" href="DominiqueMakowski_CV_fr.pdf#" class="download" title="French">French</a></p></li>
+<li><p><a target="_blank" href="DominiqueMakowski_CV.pdf#" class="download" title="English">English</a></p></li>
+<li><p><a target="_blank" href="DominiqueMakowski_CV_fr.pdf#" class="download" title="French">French</a></p></li>
 </ul>
 <hr />
 </div>
@@ -321,7 +322,7 @@ $(document).ready(function () {
 </div>
 <div id="technical-skills" class="section level4">
 <h4>Technical Skills</h4>
-<p><img src="about_files/figure-html/unnamed-chunk-2-1.png" width="960" style="display: block; margin: auto;" /></p>
+<p><img src="about_files/figure-html/unnamed-chunk-3-1.png" width="960" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 
