--- a/courses.html
+++ b/courses.html
@@ -11,11 +11,11 @@
 
 
 
-<title>Teaching</title>
+<title>Teaching.</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -98,34 +98,34 @@ button.code-folding-btn:focus {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 51px;
+  padding-top: 64px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 
 .section h2 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h3 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h4 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h5 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h6 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 </style>
 
@@ -164,7 +164,7 @@ $(document).ready(function () {
 
 
 
-<div class="navbar navbar-inverse  navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
@@ -246,11 +246,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Teaching</h1>
+<h1 class="title toc-ignore">Teaching.</h1>
 
 </div>
 
 
+<hr />
 <div class="figure" style="text-align: center">
 <img src="media/code.jpg" alt="**Writing a program to solve the hard problem of consciousness.**" width="650" />
 <p class="caption">
@@ -274,7 +275,7 @@ $(document).ready(function () {
 <p>My technical expertise covers the following topics (see <a href="https://dominiquemakowski.github.io/about.html">CV</a> for details):</p>
 <ul>
 <li><strong>EEG</strong>: Theory, aquisition (Brain Products and Geodesic) and processing (using <a href="http://martinos.org/mne/stable/index.html">MNE</a>)</li>
-<li><strong>Biosignals</strong>: ECG, EDA, RSP, BVP and facial EMG theory, aquisition (Biopac) and processing (using <a href="https://github.com/neuropsychology/NeuroKit.py">NeuroKit</a>)</li>
+<li><strong>Biosignals</strong>: ECG, EDA, RSP, BVP and facial EMG theory, acquisition (Biopac) and processing (using <a href="https://github.com/neuropsychology/NeuroKit.py">NeuroKit</a>)</li>
 <li><strong>MRI</strong>: Beginner (see <a href="https://dominiquemakowski.github.io/about.html">CV</a> for details about the trainings)</li>
 <li><strong>Statistics</strong>: Bayesian (or frequentist) mixed modelling, machine Learning, structural equation modelling</li>
 <li><strong>Programming</strong>: Python, R, matlab, currently learning Julia</li>
