--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ $(document).ready(function () {
 
 
 <hr />
-<p><img src="media/paris.png" width="750" style="display: block; margin: auto;" /></p>
+<p><img src="media/paris_bw.png" width="750" style="display: block; margin: auto;" /></p>
 <hr />
 <p align="center">
 <strong>⚠️ Looking for postdoc opportunities (<em>my current contract ends in June 2018</em>) ⚠️</strong>
