--- a/packages.knit.html
+++ b/packages.knit.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Teaching.</title>
+<title>Packages &amp; Tools.</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,7 +22,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -248,43 +247,39 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Teaching.</h1>
+<h1 class="title toc-ignore">Packages &amp; Tools.</h1>
 
 </div>
 
 
+<p>I’m the author of 3 open-source packages, respectively devoted to experiment creation, physiological signals analysis and statistics.</p>
 <hr />
-<div class="figure" style="text-align: center">
-<img src="media/code.jpg" alt="**Writing a program to solve the hard problem of consciousness.**" width="650" />
-<p class="caption">
-<strong>Writing a program to solve the hard problem of consciousness.</strong>
-</p>
-</div>
-<hr />
-<div id="academic" class="section level1">
-<h1>Academic</h1>
-<p>I’ve already give academic lectures on the following topics (see <a href="https://dominiquemakowski.github.io/about.html">CV</a> for details):</p>
+<p><img src="media/neuropsydia.png" width="300" style="display: block; margin: auto;" /></p>
+<div id="neuropsydia" class="section level3">
+<h3><strong>Neuropsydia</strong></h3>
 <ul>
-<li><strong>General Neuroscience and Psychology</strong>: Neuroanatomy, emotion regulation, mindfulness, psychological trauma and handicap</li>
-<li><strong>Clinical Neuropsychology</strong>: Main neurodegenerative, neurological and psychiatric disorders, neuropsychological examination and diagnostic, psychometry, cognitive rehabilitation, practice supervision</li>
-<li><strong>Cognitive Psychology</strong>: Models of working memory, mental imagery and categorisation</li>
-<li><strong>Differential Psychology</strong>: Experimental methodology, scientific reasoning, psychometric properties of tests and questionnaires, statistics and introduction to concepts such as intelligence, personality and creativity</li>
+<li>A Python Module for Creating Experiments, Tasks and Questionnaires.</li>
+<li><a href="https://github.com/neuropsychology/Neuropsydia.py" class="uri">https://github.com/neuropsychology/Neuropsydia.py</a></li>
 </ul>
 <hr />
+<p><img src="media/neurokit.png" width="300" style="display: block; margin: auto;" /></p>
 </div>
-<div id="technical" class="section level1">
-<h1>Technical</h1>
-<p>My technical expertise covers the following topics (see <a href="https://dominiquemakowski.github.io/about.html">CV</a> for details):</p>
+<div id="neurokit" class="section level3">
+<h3><strong>NeuroKit</strong></h3>
 <ul>
-<li><strong>EEG</strong>: Theory, aquisition (Brain Products and Geodesic) and processing (using <a href="http://martinos.org/mne/stable/index.html">MNE</a>)</li>
-<li><strong>Biosignals</strong>: ECG, EDA, RSP, BVP and facial EMG theory, acquisition (Biopac) and processing (using <a href="https://github.com/neuropsychology/NeuroKit.py">NeuroKit</a>)</li>
-<li><strong>MRI</strong>: Beginner (see <a href="https://dominiquemakowski.github.io/about.html">CV</a> for details about the trainings)</li>
-<li><strong>Statistics</strong>: Bayesian (or frequentist) mixed modelling, machine Learning, structural equation modelling</li>
-<li><strong>Programming</strong>: Python, R, matlab, currently learning Julia</li>
+<li>A Python Toolbox for Statistics and Neurophysiological Signal Processing (EEG, EDA, ECG, EMG…).</li>
+<li><a href="https://github.com/neuropsychology/NeuroKit.py" class="uri">https://github.com/neuropsychology/NeuroKit.py</a></li>
 </ul>
-<!-- ```{r, out.width = "500px", echo = FALSE, eval = TRUE, fig.align='center'} -->
-<!-- knitr::include_graphics("media/conf3.jpg") -->
-<!-- ``` -->
+<hr />
+<p><img src="media/psycho.png" width="300" style="display: block; margin: auto;" /></p>
+</div>
+<div id="psycho" class="section level3">
+<h3><strong>Psycho</strong></h3>
+<ul>
+<li>An R package for Efficient and Publishing-Oriented Workflow for Psychological Science.</li>
+<li><a href="https://github.com/neuropsychology/psycho.R" class="uri">https://github.com/neuropsychology/psycho.R</a></li>
+</ul>
+<hr />
 </div>
 
 
