--- a/courses.knit.html
+++ b/courses.knit.html
@@ -22,7 +22,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -263,45 +262,12 @@ $(document).ready(function () {
 <hr />
 <div id="academic" class="section level1">
 <h1>Academic</h1>
-<p>I’ve already give academic lectures (total hours since 2014: <strong>400</strong>) on the following topics (see <a href="https://dominiquemakowski.github.io/about.html">CV</a> for details):</p>
+<p>I’ve already give academic lectures on the following topics (see <a href="https://dominiquemakowski.github.io/about.html">CV</a> for details):</p>
 <ul>
-<li><strong>Neuropsychology</strong> (<em>192 hours, 2nd year, 3rd year and master level</em>):
-<ul>
-<li>Clinical Neuropsychology:
-<ul>
-<li>Neuropsychological syndromes</li>
-<li>Neuropsychological examination and diagnostic</li>
-<li>Cognitive rehabilitation</li>
-<li>Clinical practice supervision</li>
-<li>Neuropsychology in psychiatry</li>
-</ul></li>
-<li>Cognitive Neuroscience:
-<ul>
-<li>Neuroanatomy</li>
-<li>Emotion Regulation</li>
-<li>Mindfulness</li>
-<li>Memory</li>
-<li>Neuroimaging</li>
-</ul></li>
-</ul></li>
-<li><strong>Differential Psychology</strong> (<em>144 hours, 1st year level</em>):
-<ul>
-<li>Practice:
-<ul>
-<li>Experimental methodology</li>
-<li>Scientific reasoning</li>
-<li>Psychometric properties of tests and questionnaires</li>
-<li>Statistics (correlations)</li>
-</ul></li>
-<li>Theory:
-<ul>
-<li>Intelligence</li>
-<li>Personality</li>
-<li>Creativity</li>
-</ul></li>
-</ul></li>
-<li><strong>Cognitive Psychology</strong> (<em>48 hours, 3rd year level</em>): Models of working memory, mental imagery and categorisation</li>
-<li><strong>Other</strong> (<em>16 hours</em>): Internet, ethics, digital rights</li>
+<li><strong>General Neuroscience and Psychology</strong>: Neuroanatomy, emotion regulation, mindfulness, psychological trauma and handicap</li>
+<li><strong>Clinical Neuropsychology</strong>: Main neurodegenerative, neurological and psychiatric disorders, neuropsychological examination and diagnostic, psychometry, cognitive rehabilitation, practice supervision</li>
+<li><strong>Cognitive Psychology</strong>: Models of working memory, mental imagery and categorisation</li>
+<li><strong>Differential Psychology</strong>: Experimental methodology, scientific reasoning, psychometric properties of tests and questionnaires, statistics and introduction to concepts such as intelligence, personality and creativity</li>
 </ul>
 <hr />
 </div>
