--- a/about.html
+++ b/about.html
@@ -286,19 +286,20 @@ $(document).ready(function () {
 <li>Cognitive and Behavioural Psychotherapist (2017, AFTCC, France)</li>
 </ul>
 <!-- <p align="center">*Certifications*</p> -->
-</div>
-<div id="certifications" class="section level4">
-<h4>Certifications</h4>
-<ul>
-<li>Academic Teaching (2017, University of Sorbonne Paris Cité, France)</li>
-<li>Mindfulness based on Compassion and Insight (2016, Sainte-Anne Hospital, France)</li>
-<li>First Aid (2016, University of Sorbonne Paris Cité, France)</li>
-</ul>
 <!-- <p align="center">*Trainings*</p> -->
 </div>
 <div id="trainings" class="section level4">
 <h4>Trainings</h4>
 <ul>
+<li>Teaching
+<ul>
+<li>Academic Teaching (2017, University of Sorbonne Paris Cité, France)</li>
+</ul></li>
+<li>Clinical
+<ul>
+<li>Mindfulness based on Compassion and Insight (2016, Sainte-Anne Hospital, France)</li>
+<li>First Aid (2016, University of Sorbonne Paris Cité, France)</li>
+</ul></li>
 <li>Neuroimagering
 <ul>
 <li>Multiscale Neurodynamics of Emotions and their Pathologies: from Oscillations to Complex Networks (2017, University of Lille, France)</li>
@@ -322,7 +323,7 @@ $(document).ready(function () {
 </div>
 <div id="technical-skills" class="section level4">
 <h4>Technical Skills</h4>
-<p><img src="about_files/figure-html/unnamed-chunk-2-1.png" width="960" style="display: block; margin: auto;" /></p>
+<p><img src="about_files/figure-html/unnamed-chunk-12-1.png" width="672" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 
