--- a/about.html
+++ b/about.html
@@ -259,9 +259,9 @@ $(document).ready(function () {
 <!-- <img src="media/cambodia.JPG" style="width: 50%; height: 50%"/> -->
 <!-- </div> -->
 <div class="figure" style="text-align: center">
-<img src="media/conf4.jpg" alt="**Showing some ground-breaking results.**" width="600px" />
+<img src="media/conf5.jpg" alt="**Pondering on the nature of reality.**" width="800px" />
 <p class="caption">
-<strong>Showing some ground-breaking results.</strong>
+<strong>Pondering on the nature of reality.</strong>
 </p>
 </div>
 <hr />
@@ -323,7 +323,7 @@ $(document).ready(function () {
 </div>
 <div id="technical-skills" class="section level4">
 <h4>Technical Skills</h4>
-<p><img src="about_files/figure-html/unnamed-chunk-12-1.png" width="672" style="display: block; margin: auto;" /></p>
+<p><img src="about_files/figure-html/unnamed-chunk-2-1.png" width="672" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 
