--- a/about.html
+++ b/about.html
@@ -259,9 +259,9 @@ $(document).ready(function () {
 <!-- <img src="media/cambodia.JPG" style="width: 50%; height: 50%"/> -->
 <!-- </div> -->
 <div class="figure" style="text-align: center">
-<img src="media/conf5.jpg" alt="**Pondering on the nature of reality.**" width="800px" />
+<img src="media/conf5.jpg" alt="**Pondering over the nature of reality.**" width="800px" />
 <p class="caption">
-<strong>Pondering on the nature of reality.</strong>
+<strong>Pondering over the nature of reality.</strong>
 </p>
 </div>
 <hr />
