--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-1.1/textmate.css" rel="stylesheet" />
-<script src="site_libs/highlightjs-1.1/highlight.js"></script>
+<link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
+<script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
@@ -31,10 +31,12 @@
   }
 </style>
 <script type="text/javascript">
-if (window.hljs && document.readyState && document.readyState === "complete") {
-   window.setTimeout(function() {
-      hljs.initHighlighting();
-   }, 0);
+if (window.hljs) {
+  hljs.configure({languages: []});
+  hljs.initHighlightingOnLoad();
+  if (document.readyState && document.readyState === "complete") {
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
+  }
 }
 </script>
 
@@ -198,7 +200,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="courses.html">
+  <a href="teaching.html">
     <span class="fa fa-graduation-cap"></span>
      
     Teaching
@@ -288,8 +290,8 @@ $(document).ready(function () {
 <!-- <p align="center">*Certifications*</p> -->
 <!-- <p align="center">*Trainings*</p> -->
 </div>
-<div id="trainings" class="section level4">
-<h4>Trainings</h4>
+<div id="additional-trainings" class="section level4">
+<h4>Additional Trainings</h4>
 <ul>
 <li>Teaching
 <ul>
@@ -318,6 +320,10 @@ $(document).ready(function () {
 <ul>
 <li>P4N 2016: Python for Neuroscience (and Psychology) (2016, University of Nottingham, UK)</li>
 <li>Scientific Programming with Python and Software Engineering Best Practices (2016, Telecom ParisTech, France)</li>
+</ul></li>
+<li>Miscellaneous
+<ul>
+<li>History of Arts (2017-2018, École du Louvre, Paris)</li>
 </ul></li>
 </ul>
 </div>
