--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
+<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
+<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -90,6 +92,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -257,7 +262,7 @@ $(document).ready(function () {
 <p><img src="media/paris_bw.png" width="750" style="display: block; margin: auto;" /></p>
 <hr />
 <p align="center">
-<strong>⚠️ Looking for postdoc opportunities (<em>my current contract ends in June 2018</em>) ⚠️</strong>
+<strong>⚠️ Looking for postdoc opportunities (<em>my current contract ends in August 2018</em>) ⚠️</strong>
 </p>
 <hr />
 <p>Welcome to my personal webpage. I’m a PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cité, and I made this website using R.</p>
