--- a/about.html
+++ b/about.html
@@ -276,7 +276,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Dominique Makowski</a>
+      <a class="navbar-brand" href="index.html">Dr. Dominique Makowski</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -376,7 +376,7 @@ $(document).ready(function () {
 </p>
 </div>
 <hr />
-<p>I’m a neuropsychologist, psychotherapist &amp; PhD student, currently living in Paris, France. I’m fluent in French, Polish, English, Python, and somehow good at pretending to speak Italian. My main figures of reference are Epictetus, Churchill and Batman. My interests are as broad as open-science, history of arts and transhumanism. My papers are available on the <a href="https://dominiquemakowski.github.io/research.html">research</a> page 🙌</p>
+<p>I’m a neuropsychologist &amp; psychotherapist, currently living in Paris, France. I’m fluent in French, Polish, English, Python, and somehow good at pretending to speak Italian. My main figures of reference are Epictetus, Churchill and Batman. My interests are as broad as open-science, history of arts and transhumanism. My papers are available on the <a href="https://dominiquemakowski.github.io/research.html">research</a> page 🙌</p>
 <hr />
 <div id="download" class="section level3">
 <h3><strong>Download</strong></h3>
@@ -393,6 +393,7 @@ $(document).ready(function () {
 <div id="titles-and-licenses" class="section level4">
 <h4>Titles and Licenses</h4>
 <ul>
+<li>Doctor in Psychology (2018, University of Sorbonne Paris Cité, France)</li>
 <li>Clinical Neuropsychologist (2014, University of Sorbonne Paris Cité, France)</li>
 <li>Cognitive and Behavioural Psychotherapist (2017, AFTCC, France)</li>
 </ul>
