--- a/research.knit.html
+++ b/research.knit.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Packages &amp; Tools.</title>
+<title>Research.</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,8 +22,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -357,40 +355,29 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Packages &amp; Tools.</h1>
+<h1 class="title toc-ignore">Research.</h1>
 
 </div>
 
 
-<p>I’m the author of 3 <em>main</em> open-source packages, respectively devoted to signal processing, statistics and experiment creation.</p>
 <hr />
-<p><img src="media/neurokit.png" width="300" style="display: block; margin: auto;" /></p>
-<div id="neurokit" class="section level3">
-<h3><strong>NeuroKit</strong></h3>
-<ul>
-<li>A Python Toolbox for Statistics and Neurophysiological Signal Processing (EEG, EDA, ECG, EMG…).</li>
-<li><a href="https://github.com/neuropsychology/NeuroKit.py" class="uri">https://github.com/neuropsychology/NeuroKit.py</a></li>
-</ul>
-<hr />
-<p><img src="media/psycho.png" width="300" style="display: block; margin: auto;" /></p>
+<!-- ```{r, out.width = "400px", echo = FALSE, eval = TRUE, fig.align='center'} -->
+<!-- knitr::include_graphics("media/braincloud.png") -->
+<!-- # USE rmarkdown::render_site(encoding = "UTF-8") to render the website. Then push with github. -->
+<!-- ``` -->
+<!-- --------- -->
+<p align="center">
+<div class="figure" style="text-align: center">
+<img src="research_files/figure-html/unnamed-chunk-1-1.png" alt="**My research wordcloud, based on the most frequent words of my papers (done using R).**" width="960" />
+<p class="caption">
+<strong>My research wordcloud, based on the most frequent words of my papers (done using R).</strong>
+</p>
 </div>
-<div id="psycho" class="section level3">
-<h3><strong>Psycho</strong></h3>
-<ul>
-<li>An R package for Efficient and Publishing-Oriented Workflow for Psychological Science.</li>
-<li><a href="https://neuropsychology.github.io/psycho.R/">Blog</a></li>
-<li><a href="https://github.com/neuropsychology/psycho.R" class="uri">https://github.com/neuropsychology/psycho.R</a></li>
-</ul>
+</p>
 <hr />
-<p><img src="media/neuropsydia.png" width="300" style="display: block; margin: auto;" /></p>
-</div>
-<div id="neuropsydia" class="section level3">
-<h3><strong>Neuropsydia</strong></h3>
-<ul>
-<li>A Python Module for Creating Experiments, Tasks and Questionnaires.</li>
-<li><a href="https://github.com/neuropsychology/Neuropsydia.py" class="uri">https://github.com/neuropsychology/Neuropsydia.py</a></li>
-</ul>
-<hr />
+<div id="research-topics" class="section level1">
+<h1>Research Topics</h1>
+<p>In 1896, the Lumi</p>
 </div>
 
 
