--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Dominique Makowski</a>
+      <a class="navbar-brand" href="index.html">Dr. Dominique Makowski</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -369,7 +369,7 @@ $(document).ready(function () {
 <!-- **⚠️ Looking for postdoc opportunities (*my current contract ends in August 2018*) ⚠️** -->
 <!-- </p> -->
 <!-- --------------- -->
-<p>Welcome to my personal webpage. I’m a PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cité, and I made this website using R.</p>
+<p>Welcome to my personal webpage. I am currently living in Singapore for a postdoc.</p>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
