--- a/index.html
+++ b/index.html
@@ -364,12 +364,12 @@ $(document).ready(function () {
 
 <hr />
 <p><img src="media/firenze.JPG" width="600" style="display: block; margin: auto;" /></p>
-<!-- --------------- -->
-<!-- <p align="center"> -->
-<!-- **⚠️ Looking for postdoc opportunities (*my current contract ends in August 2018*) ⚠️** -->
-<!-- </p> -->
-<!-- --------------- -->
-<p>Welcome to my personal webpage. I am currently living in Singapore for a postdoc.</p>
+<hr />
+<p align="center">
+<strong>Welcome to my personal webpage. Currently a postdoc in Singapore 🇸🇬.</strong>
+</p>
+<hr />
+<p><sup><em>PS: I made this website using R.</em></sub></p>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
