--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/png" href="/img/icon-32.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/slides/example/">
+  <link rel="canonical" href="https://dominiquemakowski.github.io/slides/example/">
 
   <title>Slides | Dr. Dominique Makowski</title>
 
