--- a/publication/makowski2015emotion/index.html
+++ b/publication/makowski2015emotion/index.html
@@ -612,7 +612,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Gériatrie et Psychologie Neuropsychiatrie du Vieillissement</em></div>
+          <div class="col-12 col-md-9">Makowski, D., Sperduti, M., Blanchet, S., Nicolas, S., &amp; Piolino, P. (2015). Emotion regulation and the cognitive decline in aging: beyond the paradox. <em>Geriatrie et psychologie neuropsychiatrie du vieillissement, 13</em>(3), 301-308.</div>
         </div>
       </div>
       <div class="col-md-1"></div>
