--- a/publication/index.html
+++ b/publication/index.html
@@ -1349,7 +1349,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/publication/makowski2017neuropsydia/" >2017 - Neuropsydia. py; A Python Module for Creating Experiments, Tasks and Questionnaires</a>
+      <a href="/publication/makowski2017neuropsydia/" >2017 - Neuropsydia. py: A Python Module for Creating Experiments, Tasks and Questionnaires</a>
     </h3>
 
     
