--- a/publication/nicolas2016can/index.html
+++ b/publication/nicolas2016can/index.html
@@ -559,6 +559,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1484/j.eyhp.5.112940" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
