--- a/publication/sperduti2017interaction/index.html
+++ b/publication/sperduti2017interaction/index.html
@@ -561,6 +561,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1007/s00221-017-5081-6" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
