--- a/publication/makowski2015emotion/index.html
+++ b/publication/makowski2015emotion/index.html
@@ -561,6 +561,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1684/pnv.2015.0561" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
