--- a/publication/makowski2017being/index.html
+++ b/publication/makowski2017being/index.html
@@ -559,6 +559,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1016/j.concog.2017.06.015" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
