--- a/publication/makowski2018psycho/index.html
+++ b/publication/makowski2018psycho/index.html
@@ -559,6 +559,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.21105/joss.00470" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
