--- a/publication/makowski2019bayestestr/index.html
+++ b/publication/makowski2019bayestestr/index.html
@@ -561,6 +561,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.21105/joss.01541" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
