--- a/publication/makowski2019heart/index.html
+++ b/publication/makowski2019heart/index.html
@@ -561,6 +561,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1111/psyp.13490" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
