--- a/publication/makowski2019phenomenal/index.html
+++ b/publication/makowski2019phenomenal/index.html
@@ -561,6 +561,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.3758/s13415-018-00681-0" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
