--- a/publication/nicolas2017centenaire/index.html
+++ b/publication/nicolas2017centenaire/index.html
@@ -559,6 +559,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.3917/bupsy.549.0163" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
