--- a/publication/sperduti2016protective/index.html
+++ b/publication/sperduti2016protective/index.html
@@ -559,6 +559,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1080/13825585.2016.1159652" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
