--- a/publication/sperduti2017distinctive/index.html
+++ b/publication/sperduti2017distinctive/index.html
@@ -559,6 +559,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1016/j.actpsy.2016.12.001" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
