--- a/publication/sperduti2017meditation/index.html
+++ b/publication/sperduti2017meditation/index.html
@@ -559,6 +559,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1684/pnv.2017.0672" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
