--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@
   <div>
     <p>See all publications by <a href="https://dominiquemakowski.github.io/publication/" target="_blank">clicking here</a>.</p>
 
-<p><sup><sub><em>Disclaimer: all rights of the publications go to the publishers. As a token of respect for their tremendous contribution to research,</em> <strong><em>please download the papers only if you are my personal colleague and peer</em></strong> <em>so that I won&rsquo;t be sued. Thanks!</em></sub></sup></p>
+<p><sup><sub><em>Disclaimer: all rights of the publications go to the publishers. As a token of respect for their tremendous contribution to research,</em> <strong><em>please download the papers only if you are my personal colleague and peer</em></strong> <em>so that I won&rsquo;t get sued. Thanks!</em></sub></sup></p>
 
   </div>
 </div>
