--- a/index.html
+++ b/index.html
@@ -2548,7 +2548,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/post/2020_05_17_simulate_ecg/" >Generate an Articial ECG Signal in Python</a>
+      <a href="/post/2020_05_17_simulate_ecg/" >Generate an articial ECG signal in Python</a>
     </h3>
 
     
