blogpost R or python

--- a/publication/index.html
+++ b/publication/index.html
@@ -1114,7 +1114,7 @@
 
 
   
-  <span><a href="/authors/dominique-makowski/">Dominique Makowski</a></span>, <span><a href="/authors/marco-sperduti/">Marco Sperduti,</a></span>, <span>Samantha Lavallée,</span>, <span><a href="/authors/serge-nicolas/">Serge Nicolas,</a></span>, <span><a href="/authors/pascale-piolino/">Pascale Piolino</a></span>
+  <span><a href="/authors/dominique-makowski/">Dominique Makowski</a></span>, <span><a href="/authors/marco-sperduti/">Marco Sperduti</a></span>, <span>Samantha Lavallée</span>, <span><a href="/authors/serge-nicolas/">Serge Nicolas</a></span>, <span><a href="/authors/pascale-piolino/">Pascale Piolino</a></span>
 
       </div>
       
@@ -1471,7 +1471,7 @@
 
 
   
-  <span><a href="/authors/dominique-makowski/">Dominique Makowski</a></span>, <span><a href="/authors/mattan-ben-shachar/">Mattan Ben-Shachar</a></span>, <span>Daniel Lüdecke</span>
+  <span><a href="/authors/dominique-makowski/">Dominique Makowski</a></span>, <span>Mattan S. Ben-Shachar</span>, <span>Daniel Lüdecke</span>
 
       </div>
       
