--- a/publication/makowski2019adaptation/index.html
+++ b/publication/makowski2019adaptation/index.html
@@ -644,7 +644,7 @@
 
 
   
-  <span><a href="/authors/dominique-makowski/">Dominique Makowski</a></span>, <span><a href="/authors/marco-sperduti/">Marco Sperduti,</a></span>, <span>Samantha Lavallée,</span>, <span><a href="/authors/serge-nicolas/">Serge Nicolas,</a></span>, <span><a href="/authors/pascale-piolino/">Pascale Piolino</a></span>
+  <span><a href="/authors/dominique-makowski/">Dominique Makowski</a></span>, <span><a href="/authors/marco-sperduti/">Marco Sperduti</a></span>, <span>Samantha Lavallée</span>, <span><a href="/authors/serge-nicolas/">Serge Nicolas</a></span>, <span><a href="/authors/pascale-piolino/">Pascale Piolino</a></span>
 
   </div>
   
