--- a/publication/makowski2019bayestestr/index.html
+++ b/publication/makowski2019bayestestr/index.html
@@ -644,7 +644,7 @@
 
 
   
-  <span><a href="/authors/dominique-makowski/">Dominique Makowski</a></span>, <span><a href="/authors/mattan-ben-shachar/">Mattan Ben-Shachar</a></span>, <span>Daniel Lüdecke</span>
+  <span><a href="/authors/dominique-makowski/">Dominique Makowski</a></span>, <span>Mattan S. Ben-Shachar</span>, <span>Daniel Lüdecke</span>
 
   </div>
   
