add report in tools

--- a/research/index.html
+++ b/research/index.html
@@ -623,9 +623,9 @@
 <!-- https://www.tablesgenerator.com/markdown_tables# -->
 <table>
 <colgroup>
-<col width="14%" />
+<col width="15%" />
 <col width="20%" />
-<col width="64%" />
+<col width="63%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -636,7 +636,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td>2020–present</td>
+<td><em>2020–present</em></td>
 <td><strong>Associate Editor</strong></td>
 <td>Frontiers in Psychology: <em>Quantitative Psychology and Measurement</em></td>
 </tr>
@@ -646,10 +646,11 @@
 </div>
 <div id="scientific-impact-retrieved-on-22-may-2020" class="section level2">
 <h2>Scientific Impact <sub><sup><em>(retrieved on 22 May 2020)</em></sup></sub></h2>
-<img src="img/impactplot-1.png" width="4500" style="display: block; margin: auto;" />
+<img src="img/plot_impact.png" width="100%" />
 <center>
 <sup><em>Cumulative citations and publication number, automatically scrapped from Google Scholar.</em></sup>
 </center>
+<p><br></p>
 <table>
 <thead>
 <tr class="header">
